# cpur

./: CMakeLists.txt
src/: main.cpp
src/cpur/: Emitter.h  Module.h  Particle.h  Types.h
src/cpur/modules/: BaseLifetimeModule.h  GravityModule.cpp  GravityModule.h  IStarterModule.h  InitialParticlePropertyModule.cpp  InitialParticlePropertyModule.h  ShapeModule.cpp  ShapeModule.h  ShapeParams.h  SizeOverLifetimeModule.cpp  SizeOverLifetimeModule.h
src/cpur/modules/shape_params/: SphereShapeParams.cpp  SphereShapeParams.h
